--- a/doc/tex/chapter02.tex
+++ b/doc/tex/chapter02.tex
@@ -5,380 +5,196 @@
 %% Encoding: UTF-8
 %%==================================================
 
-\chapter{一些 \LaTeX 排版的例子}
-\label{chap:example}
+\chapter{Hessian-Affine兴趣点检测算法}
+\label{chap:algorithm}
+  本算法可以在图像经过仿射变换或者尺度变换后寻找到相应的兴趣点，为了完成这样的目标，本算法基于如下理论：
+  \begin{itemize}
+    \item 通过Hessian矩阵检测出的兴趣点可以抵抗仿射变换的干扰，对相同的几何图案产生类似的响应；
+    \item 尺度空间理论；
+    \item 通过二阶矩量矩阵估测一个像素和哪些临近像素可以构成一个仿射形状。
+  \end{itemize}
+  本算法的主体流程如下：
+  \begin{enumerate}
+    \item 通过尺度空间理论构建不同的尺度空间；
+    \item 在不同的尺度空间中，对每个3*3的像素块计算Hessian矩阵的响应，并找出在相邻尺度空间中响应最大的点；
+    \item 计算这些点的仿射形状，如果存在仿射形状，将其均一化后计算SIFT描述符。
+  \end{enumerate}
+  通过这三步，可以排除尺度与镜头角度的影响，将图像中的关键点找出来。
 
-\section{数学排版的例子}
-\label{sec:matheq}
+  \section{尺度空间理论}
+    由于计算机无法确定一个图像中物体的尺度，也就是说无从知道物体的大小，一个100像素的块可能是一片树叶也可能是一颗树；对于机器视觉系统，需要生成多个尺度空间，来抵抗尺度的干扰。尺度空间可以处理n维函数（计算机视觉中为2维），将其嵌入到一族单参数函数族中。这个单参数函数族就叫做尺度空间。为了生成多个尺度，通过多次降采样与高斯模糊来模拟人眼的特性。
+    \subsection{高斯模糊}
+      模糊算法可以认为是每个像素取周边像素的平均值，但是模糊算法需要一个核函数来决定怎样进行模糊运算。常用的模糊算法有均值模糊、高斯模糊、镜头模糊等，对应不同的和函数。
+      \begin{figure}[!htp]
+        \centering
+        \subfigure[原图]{\includegraphics[width=0.2\textwidth]{chap2/lena}}
+        \hspace{1cm}
+        \subfigure[高斯模糊]{\includegraphics[width=0.2\textwidth]{chap2/lenaGauBlur}}
+        \hspace{1cm}
+        \subfigure[均值模糊]{\includegraphics[width=0.2\textwidth]{chap2/lenaAvgBlur}}
+        \caption{模糊算法示例}
+      \end{figure}
+      在本算法中，由于高斯函数满足如下尺度空间公理：
+      \begin{itemize}
+        \item 线性
+        \item 平移不变性
+        \item 半群特性：$g(x,y,t_1)*g(x,y,t_2)=g(x,y,t_1+t_2)$
+        \item 旋转不变性
+        \item 正则性
+      \end{itemize}
+      这使得高斯卷积核是实现尺度变换的唯一线性核，因为高斯核对图像模糊不会引入其他噪声，高斯模糊使用正态分布作为核函数对图像进行卷积。正态分布的密度函数叫做高斯函数，在一维上表示为：
+      \begin{equation}
+        f(x,\sigma)=\frac{1}{\sigma\sqrt{2\pi}}e^{-x^{2}/2\sigma^2}
+      \end{equation}
+      将其推导到二维函数后：
+      \begin{equation}
+        G(x,y,\sigma)=\frac{1}{2\pi\sigma^2}e^{-(x^2+y^2)/2\sigma^2}
+      \end{equation}
+      则一副二维图像的尺度空间定义为：
+      \begin{equation}
+        L(x,y,\sigma)=G(x,y,\sigma)*I(x,y)
+      \end{equation}
+      其中$\sigma$是尺度，决定了图像的平滑程度，尺度越大细节越少，$(x,y)$是图片的空间坐标。在本算法中，对一个分辨率下的图片使用不同的尺度$\sigma$进行高斯模糊，初始的尺度$initialSigma$与尺度空间数量$numberOfScales$可以通过代码进行控制。
+      \begin{figure}[htp]
+        \centering
+        \includegraphics[width=0.7\textwidth]{chap2/multiSigma}
+        \caption{高斯模糊中，不同$\sigma$下的一张图片}
+      \end{figure}
+    \subsection{高斯金字塔}
 
-\subsection{公式排版}
-\label{sec:eqformat}
-
-这里有举一个长公式排版的例子，来自\href{http://www.tex.ac.uk/tex-archive/info/math/voss/mathmode/Mathmode.pdf}{《Math mode》}：
-
-\begin {multline}
-  \frac {1}{2}\Delta (f_{ij}f^{ij})=
-  2\left (\sum _{i<j}\chi _{ij}(\sigma _{i}-
-    \sigma _{j}) ^{2}+ f^{ij}\nabla _{j}\nabla _{i}(\Delta f)+\right .\\
-  \left .+\nabla _{k}f_{ij}\nabla ^{k}f^{ij}+
-    f^{ij}f^{k}\left [2\nabla _{i}R_{jk}-
-      \nabla _{k}R_{ij}\right ]\vphantom {\sum _{i<j}}\right )
-\end{multline}
-
-\subsubsection{一个四级标题}
-\label{sec:depth4}
-
-这是全文唯一的一个四级标题。在这部分中将演示可伸长符号（箭头、等号的例子）的例子，以及如何在可伸长的符号上标注。在\href{http://zhou63.ahut.edu.cn/latex/ctexfaq.pdf}{《CTeX常见问题集》}中也由类似的介绍。
-首先需要在diss.tex导言区引入如下的内容：
-
-\begin{lstlisting}[language={TeX}, caption={插入导言区的内容}]
-  \makeatletter
-  \def\ExtendSymbol#1#2#3#4#5{\ext@arrow 0099{\arrowfill@#1#2#3}{#4}{#5}}
-  \def\RightExtendSymbol#1#2#3#4#5{\ext@arrow 0359{\arrowfill@#1#2#3}{#4}{#5}}
-  \def\LeftExtendSymbol#1#2#3#4#5{\ext@arrow 6095{\arrowfill@#1#2#3}{#4}{#5}}
-  \makeatother
-  
-  \newcommand\myRightarrow[2][]{\RightExtendSymbol{=}{=}{\Rightarrow}{#1}{#2}}
-  \newcommand\myLeftarrow[2][]{\LeftExtendSymbol{\Leftarrow}{=}{=}{#1}{#2}}
-  \newcommand\myBioarrow[2][]{\ExtendSymbol{\Leftarrow}{=}{\Rightarrow}{#1}{#2}}
-  \newcommand\myLongEqual[2][]{\ExtendSymbol{=}{=}{=}{#1}{#2}}
-\end{lstlisting}
-
-然后，在正文插入如代码\ref{mathextend}所示的内容。效果如下：
-
-\begin{lstlisting}[language={TeX}, caption={可伸长的符号},label=mathextend,float]
-  \begin{eqnarray}
-    f(x) & \myBioarrow{A=B}  & B \\
-    & \myLongEqual{A=B} & B \\
-    & \myLeftarrow[A=B^2]{B=A^2} & B \nonumber \\
-    & \myRightarrow{B^2=A^2} & B
-  \end{eqnarray}
-\end{lstlisting}
-
-\begin{displaymath}
-    A \xleftarrow{n=0} B \xrightarrow[LongLongLongLong]{n>0} C 
-\end{displaymath}
-
-\begin{eqnarray}
-  f(x) & \myBioarrow{A=B}  & B \\
-  & \myLongEqual{A=B} & B \\
-  & \myLeftarrow[A=B^2]{B=A^2} & B \nonumber \\
-  & \myRightarrow{B^2=A^2} & B
-\end{eqnarray}
-
-又如：
-
-\begin{align}
-  \label{eq:none}
-  & I(X_3;X_4)-I(X_3;X_4|X_1)-I(X_3;X_4|X_2) \nonumber \\
-  \myLongEqual{a)}\, & [I(X_3;X_4)-I(X_3;X_4|X_1)]-I(X_3;X_4|\tilde{X}_2) \\
-  \myLongEqual[\rule{0.28cm}{0cm}]{}\, & I(X_1;X_3;X_4)-I(X_3;X_4|\tilde{X}_2)
-\end{align}
-
-
-\subsection{定理环境}
-
-模板中定义了丰富的定理环境
-algo(算法)，thm(定理)，lem(引理)，prop(命题)，cor(推论)，defn(定义)，conj(猜想)，exmp(例)，rem(注)，case(情形)，
-bthm(断言定理)，blem(断言引理)，bprop(断言命题)，bcor(断言推论)。
-amsmath还提供了一个proof(证明)的环境。
-这里举一个``定理''和``证明''的例子。
-\begin{thm}[留数定理]
-\label{thm:res}
-  假设$U$是复平面上的一个单连通开子集，$a_1,\ldots,a_n$是复平面上有限个点，$f$是定义在$U\backslash \{a_1,\ldots,a_n\}$上的全纯函数，
-  如果$\gamma$是一条把$a_1,\ldots,a_n$包围起来的可求长曲线，但不经过任何一个$a_k$，并且其起点与终点重合，那么：
-
-  \begin{equation}
-    \label{eq:res}
-    \ointop_{\gamma}f(z)\,\mathrm{d}z = 2\uppi\mathbf{i}\sum^n_{k=1}\mathrm{I}(\gamma,a_k)\mathrm{Res}(f,a_k)
-  \end{equation}
-
-  如果$\gamma$是若尔当曲线，那么$\mathrm{I}(\gamma, a_k)=1$，因此：
-
-  \begin{equation}
-    \label{eq:resthm}
-    \ointop_{\gamma}f(z)\,\mathrm{d}z = 2\uppi\mathbf{i}\sum^n_{k=1}\mathrm{Res}(f,a_k)
-  \end{equation}
-
-      % \oint_\gamma f(z)\, dz = 2\pi i \sum_{k=1}^n \mathrm{Res}(f, a_k ). 
-
-  在这里，$\mathrm{Res}(f, a_k)$表示$f$在点$a_k$的留数，$\mathrm{I}(\gamma,a_k)$表示$\gamma$关于点$a_k$的卷绕数。
-  卷绕数是一个整数，它描述了曲线$\gamma$绕过点$a_k$的次数。如果$\gamma$依逆时针方向绕着$a_k$移动，卷绕数就是一个正数，
-  如果$\gamma$根本不绕过$a_k$，卷绕数就是零。
-
-  定理\ref{thm:res}的证明。
-  
-  \begin{proof}
-    首先，由……
-
-    其次，……
-
-    所以……
-  \end{proof}
-\end{thm}
-
-上面的公式例子中，有一些细节希望大家注意。微分号d应该使用``直立体''，也就是用mathrm包围起来。
-并且，微分号和被积函数之间应该有一段小间隔，可以插入\verb+\,+得到。
-斜体的$d$通常只作为一般变量。
-i,j作为虚数单位时，也应该使用``直立体''，为了明显，还加上了粗体，例如\verb+\mathbf{i}+。斜体$i,j$通常用作表示``序号''。
-其他字母在表示常量时，也推荐使用``直立体''，譬如，圆周率$\uppi$（需要upgreek宏包），自然对数的底$\mathrm{e}$。
-不过，我个人觉得斜体的$e$和$\pi$很潇洒，在不至于引起混淆的情况下，我也用这两个字母的斜体表示对应的常量。
-
-
-\section{向文档中插入图像}
-\label{sec:insertimage}
-
-\subsection{支持的图片格式}
-\label{sec:imageformat}
-
-\XeTeX 可以很方便地插入PDF、EPS、PNG、JPG格式的图片。
-
-插入PNG/JPG的例子如\ref{fig:SRR}所示。
-这两个水平并列放置的图共享一个``图标题''(table caption)，没有各自的小标题。
-
-\begin{figure}[!htp]
-  \centering
-  \includegraphics[width=0.3\textwidth]{chap2/testpng}
-  \hspace{1cm}
-  \includegraphics[width=0.3\textwidth]{chap2/testjpg}
-  \bicaption[fig:SRR]{这里将出现在插图索引中}{中文题图}{Fig}{English caption}
-\end{figure}
-
-这里还有插入eps图像和pdf图像的例子，如图\ref{fig:pdfeps}。这里将EPS和PDF图片作为子图插入，每个子图有自己的小标题。并列子图的功能是使用subfigure宏包提供的。
-
-\begin{figure}
-  \centering
-  \subfigure[EPS Figure]{
-    \label{fig:epspdf:a} %% label for first subfigure
-    \includegraphics[width=0.3\textwidth]{chap2/testeps}}
-  \hspace{1in}
-  \subfigure[PDF Figure]{
-    \label{fig:epspdf:b} %% label for second subfigure
-    \includegraphics[angle=-90,origin=br,width=0.3\textwidth]{chap2/testpdf.pdf}}
-  \bicaption[fig:pdfeps]{插入eps图像和pdf图像}{插入eps和pdf的例子}{Fig}{An EPS and PDF demo}
-\end{figure}
-
-更多关于 \LaTeX 插图的例子可以参考\href{http://www.cs.duke.edu/junhu/Graphics3.pdf}{《\LaTeX 插图指南》}。
-
-\subsection{长标题的换行}
-\label{sec:longcaption}
-
-图\ref{fig:longcaptionbad}和图\ref{fig:longcaptiongood}都有比较长图标题，通过对比发现，图\ref{fig:longcaptiongood}的换行效果更好一些。
-其中使用了minipage环境来限制整个浮动题的宽度。
-
-\begin{figure}[!htp]
- \centering
- \includegraphics[angle=-90,origin=br,width=4cm]{chap2/testpdf.pdf}
- \bicaption[fig:longcaptionbad]{这里将出现在插图索引}{海交通大学是我国历史最悠久的高等学府之一，是教育部直属、教育部与上海市共建的全国重点大学.}{Fig}{Where there is a will, there is a way.}
-\end{figure}
-
-
-  \begin{figure}[!hbp]
-    \centering
-    \begin{minipage}[b]{0.6\textwidth}
-      \captionstyle{\centering}
+      为了构建高斯金字塔，一般需要如下几个步骤：首先，图像经过一个低通滤波器进行平滑（本算法使用高斯模糊），然后，对这个平滑后的图像进行抽样（一般抽样比例在水平和竖直方向上都为1/2），从而得到一系列的缩小的图像。对于高斯金字塔，很容易直观地理解为对同一尺寸的图像，然后进行不同程度的高斯平滑，这些图像构成高斯金字塔，这种是不对的，这描述的图像集合叫做一个八度。金字塔总要有个变“尖”的过程，真正的高斯金字塔要有个平滑以及下采样的过程，因此整个图像平滑以及下采样再平滑，构成的所有图像集合才构成了图像的高斯金字塔。
+      \begin{figure}[htp]
+        \centering
+        \includegraphics[width=0.7\textwidth]{chap2/multiOctave}
+        \caption{不同尺度空间下的一张图片}
+      \end{figure}
+      \begin{wrapfigure}{r}{0.25\textwidth}
+        \centering
+        \includegraphics[width=0.2\textwidth]{chap2/pyramid}
+        \caption{金字塔}
+      \end{wrapfigure}
+      高斯金字塔构建过程中，一般首先将图像扩大一倍，在扩大的图像的基础之上构建高斯金字塔，然后对该尺寸下图像进行高斯模糊，几幅模糊之后的图像集合构成了一个八度，然后对该八度下的最模糊的一幅图像进行下采样的过程，长和宽分别缩短一倍，图像面积变为原来四分之一。
+      这幅图像就是下一个八度的初始图像，在初始图像图像的基础上完成属于这个八度的高斯模糊处理，以此类推完成整个算法所需要的所有八度构建，这样这个高斯金字塔就构建出来了。
+  \section{Hessian响应}
+    Hessian矩阵是一个自变量为向量的实值函数的二阶偏导组成的方矩阵，若函数如下：
+    \begin{equation}
+      f(x_1,x_2,\ldots,x_n)
+    \end{equation}
+    则它的Hessian矩阵为：
+    \begin{equation}
+    \begin{cases}
+      H(f)_{ij}(x) & =D_iD_jf(x), x =(x_1,x_2,\ldots,x_n) \\
+      H(f) & =\left[\begin{array}{cccc}
+      \frac{\partial^2f}{\partial x_1^2} & \frac{\partial^2f}{\partial x_1 \partial x_2} & \cdots & \frac{\partial^2f}{\partial x_1 \partial x_n} \\
+      \frac{\partial^2f}{\partial x_2 \partial x_1} & \frac{\partial^2f}{\partial x_2^2} & \cdots & \frac{\partial^2f}{\partial x_2 \partial x_n} \\
+      \vdots & \vdots & \ddots & \vdots \\
+      \frac{\partial^2f}{\partial x_n \partial x_1} & \frac{\partial^2f}{\partial x_n \partial x_2} & \cdots & \frac{\partial^2f}{\partial x_n^2} \\
+      \end{array}\right] \\
+    \end{cases}
+    \end{equation}
+    对于给定二阶导数连续的函数$f:\mathbb{R}^2\Rightarrow\mathbb{R}$，Hessian矩阵的行列式可以用于分辨$f$的临界点是鞍点或者是极值点。
+    \begin{equation}
+      H=\left|\begin{array}{cc}
+      \frac{\partial^2f}{\partial x^2} & \frac{\partial^2f}{\partial x\partial y} \\
+      \frac{\partial^2f}{\partial x\partial y} & \frac{\partial^2f}{\partial y^2} \\
+      \end{array}\right|
+      =\frac{\partial^2f}{\partial x^2}\frac{\partial^2f}{\partial y^2}-(\frac{\partial^2f}{\partial x \partial y})^2
+    \end{equation}
+    若$H>0$，则$(x,y)$是局部最大点或者局部最小点；若$H=0$，则$(x,y)$是鞍点。
+    \subsection{粗略寻找特征点} 
+      算法计算不同尺度中每个点的Hessian响应，也就是说在一个采样率下的不同尺度中，计算出Hessian响应并构建金字塔。由于金字塔是一个三维空间（平面图像二维，尺度一维），因此在三维空间中在寻找极大值点和极小值点。具体方法是比较当前特征点的值和其他26个点的值的\begin{wrapfigure}{r}{0.35\textwidth}
+        \centering
+        \includegraphics[width=0.3\textwidth]{chap2/localizePoints}
+        \caption{寻找特征点}
+      \end{wrapfigure}大小，这26个点包括：当前尺度下该点的8邻域以及前一尺度和后一尺度下与该点最近的9个点（9*2+8=26）。如果这个点是极大值或者极小值，则将其确定为待选点。
+    \subsection{确定特征点位置}
+      由于图像处于离散空间中，坐标都是整数，但是极值点的坐标不一定是整数，因此需要寻找到极值点的确定位置。对于一个自变量为离散量的函数，可以通过泰勒级数展开来拟合函数。由于每个点都在三维的空间当中，我们在尺度$\sigma$中的图像$D(x,y)$检测到了一个局部极值点，空间位置为$(x,y,\sigma)$，由于这是个离散极值点，在连续情况下极值点可能落在$(x,y,\sigma)$附近，其偏离$(x,y,\sigma)$的坐标为$(\Delta x,\Delta y,\Delta\sigma)$，对于$D(\Delta x,\Delta y,\Delta\sigma)$可以表示为在点$(x,y,\sigma)$的泰勒展开：
+      \begin{equation}
+      \begin{aligned}
+        D(\Delta x,\Delta y,\Delta\sigma)=D(x,y,\sigma)+\left[
+        \begin{array}{ccc}
+          \frac{\partial D}{x} & \frac{\partial D}{y} & \frac{\partial D}{\sigma} \\
+        \end{array}\right]\left[
+        \begin{array}{c}
+          \Delta x \\
+          \Delta y \\
+          \Delta \sigma \\
+        \end{array}\right] \\
+        +\frac{1}{2}\left[\begin{array}{ccc}
+          \Delta x & \Delta y & \Delta\sigma \\
+        \end{array}\right]
+        \left[\begin{array}{ccc}
+          \frac{\partial^2D}{\partial x^2} & \frac{\partial^2D}{\partial x\partial y} & \frac{\partial^2D}{\partial x\partial\sigma} \\
+          \frac{\partial^2D}{\partial y\partial x} & \frac{\partial^2D}{\partial y^2} & \frac{\partial^2D}{\partial y\partial\sigma} \\
+          \frac{\partial^2D}{\partial\sigma\partial x} & \frac{\partial^2D}{\partial \sigma\partial y} & \frac{\partial^2D}{\partial \sigma^2} \\
+        \end{array}\right]
+        \left[\begin{array}{c}
+          \Delta x \\
+          \Delta y \\
+          \Delta \sigma \\
+        \end{array}\right]
+      \end{aligned}
+      \end{equation}
+      写成向量形式后：
+      \begin{equation}
+        D(x)=D+\frac{\partial D^T}{\partial x}\Delta x+\frac{1}{2}\Delta x^T\frac{\partial^2D^T}{\partial x^2}\Delta x
+      \end{equation}
+      最终可以算出：
+      \begin{equation}
+        \frac{\partial^2D}{\partial x^2}\Delta x=-\frac{\partial D(x)}{\partial x}
+      \end{equation}
+      如果得出其中一个向量的偏移大于0.6，则移动到相邻点上。通过最多5次的迭代，可以得到一个最终候选点的精确位置与尺度$\hat{x}$。
+    \subsection{去除边缘点}
+      由于Hessian矩阵对边缘点敏感，但边缘点对一些噪声不稳定，因此需要去除这些边缘点。Hessian矩阵的特征值$\alpha$与$\beta$有如下公式：
+      \begin{equation}
+        Tr(H)=D_{xx}+D_{yy}=\alpha+\beta
+      \end{equation}
+      \begin{equation}
+        Det(H)=D_{xx}+D_{yy}-\left(D_{xy}\right)^2=\alpha\beta
+      \end{equation}
+      边缘点的特征为：跨越边缘的方向有较大的主曲率，与边缘相切的方向主曲率较小。因此，可以通过$\frac{\alpha}{\beta}$的比率函数并确定阈值来体现表征那些不好的边缘点，$\frac{\alpha}{\beta}$越大，说明这个点就越糟糕。设$r=\frac{\alpha}{\beta}$：
+      \begin{equation}
+        \label{equ:edgeEval}
+        \frac{Tr(H)^2}{Det(H)}=\frac{\left(\alpha+\beta\right)^2}{\alpha\beta}=\frac{\left(r\beta+\beta\right)^2}{r\beta^2}=\frac{\left(r+1\right)^2}{r}
+      \end{equation}
+      由于\ref{equ:edgeEval}是关于$r$的增函数，所以可以通过这个公式判断$r$的大小，从而判断这个点是不是边缘点。
+  \section{寻找标准仿射形状}
+    由于图像可能经过仿射变换，为了找到一个兴趣点附近图形的标准仿射形状，引入了第二矩量矩阵：
+    \begin{equation*}
+      M=\sum_{x,y}w(x,y)\left[\begin{array}{cc}
+      I_x^2 & I_xI_y \\
+      I_xI_y & I_y^2 \\
+      \end{array}\right]
+    \end{equation*}
+    其中$w(x,y)$是窗口函数，本算法中使用高斯窗口，$I_{xy}$为函数在$(x,y)$时在$xy$方向的梯度。由于矩阵$M$是角对称阵，则其可以表示为：
+    \begin{equation}
+      M=R^{-1}\left[\begin{array}{cc}
+      \lambda_1 & 0 \\
+      0 & \lambda_2 \\
+      \end{array}\right]R
+    \end{equation}
+    这个矩阵的特点是，如果图像经过仿射变换或者旋转变换，矩阵可以表示为$M_t=M_a^{-1}M_r^{-1}M_oM_rM_a$，其中$M_t$是经过变换后图形的第二矩量矩阵，$M_o$是变化前的第二矩量矩阵。这两个矩阵的特征向量相同。并且由于这个矩阵的表示类似于椭圆的表示：
+    \begin{equation*}
+    \left[\begin{array}{cc}
+    u & v \\
+    \end{array}\right]M
+    \left[\begin{array}{c}
+    u \\
+    v \\
+    \end{array}\right]
+    \end{equation*}
+    \begin{wrapfigure}{r}{0.45\textwidth}
       \centering
-      \includegraphics[angle=-90,origin=br,width=4cm]{chap2/testpdf.pdf}
-      \bicaption[fig:longcaptiongood]{这里将出现在插图索引}{海交通大学是我国历史最悠久的高等学府之一，是教育部直属、教育部与上海市共建的全国重点大学.}{Fig}{Where there is a will, there is a way.}
-    \end{minipage}     
-  \end{figure}
-
-  
-\section{表格的例子}
-\label{sec:tab}
-
-这一节给出的是一些表格的例子，如表\ref{tab:firstone}所示。
-
-\begin{table}[!hpb]
-  \centering
-  \bicaption[tab:firstone]{指向一个表格的表目录索引}{一个颇为标准的三线表格\footnotemark[1]}{Table}{A Table}
-  \begin{tabular}{@{}llr@{}} \toprule
-    \multicolumn{2}{c}{Item} \\ \cmidrule(r){1-2}
-    Animal & Description & Price (\$)\\ \midrule
-    Gnat & per gram & 13.65 \\
-    & each & 0.01 \\
-    Gnu & stuffed & 92.50 \\
-    Emu & stuffed & 33.33 \\
-    Armadillo & frozen & 8.99 \\ \bottomrule
-  \end{tabular}
-\end{table}
-\footnotetext[1]{这个例子来自\href{http://www.ctan.org/tex-archive/macros/latex/contrib/booktabs/booktabs.pdf}{《Publication quality tables in LATEX》}(booktabs宏包的文档)。这也是一个在表格中使用脚注的例子，请留意与threeparttable实现的效果有何不同。}
-
-下面一个是一个更复杂的表格，用threeparttable实现带有脚注的表格，如表\ref{tab:footnote}。
-
-\begin{table}[!htpb]
-  \bicaption[tab:footnote]{出现在表目录的标题}{一个带有脚注的表格的例子}{Table}{A Table with footnotes}
-  \centering
-  \begin{threeparttable}[b]
-     \begin{tabular}{ccd{4}cccc}
-      \toprule
-      \multirow{2}{6mm}{total}&\multicolumn{2}{c}{20\tnote{1}} & \multicolumn{2}{c}{40} &  \multicolumn{2}{c}{60}\\
-      \cmidrule(lr){2-3}\cmidrule(lr){4-5}\cmidrule(lr){6-7}
-      &www & k & www & k & www & k \\
-      \midrule
-      &$\underset{(2.12)}{4.22}$ & 120.0140\tnote{2} & 333.15 & 0.0411 & 444.99 & 0.1387 \\
-      &168.6123 & 10.86 & 255.37 & 0.0353 & 376.14 & 0.1058 \\
-      &6.761    & 0.007 & 235.37 & 0.0267 & 348.66 & 0.1010 \\
-      \bottomrule
-    \end{tabular}
-    \begin{tablenotes}
-    \item [1] the first note.% or \item [a]
-    \item [2] the second note.% or \item [b]
-    \end{tablenotes}
-  \end{threeparttable}
-\end{table}
-
-\section{参考文献管理}
-
-参考文献的管理是这个学位论文模板又一个好玩的地方。
-
-\subsection{将参考文献的内容与表现分离}
-
-这个论文模板使用BibTeX处理参考文献，这又是一个``内容''与``表现形式''分离的极好例子
-\footnote{当然，你也可以手动编参考文献item，直接插入文档中。但是，有BibTeX帮助，我觉得没有人想用这种麻烦的方法，所以就在脚注中说明了。}。
-参考文献的``内容''就是reference文件夹下的chap\textit{xx}.bib，参考文献的元数据(名称、作者、出处等)以一定的格式保存在这些纯文本文件中。
-.bib文件也可以理解为参考文献的``数据库''，正文中所有引用的参考文件条目都会从这些文件中``析出''。
-控制参考文献条目``表现形式''(格式)的是.bst文件。.bst文件定义了参考文献风格，使用不同的参考文献风格能将同一个参考文献条目输出成不同的格式。
-当然，一个文档只能使用一个参考文献风格。
-按照教务处的要求，本模板使用的是国标GBT7714风格的参考文献。
-
-BibTeX的工作过程是这样的：
-BibTeX读取.aux(第一次运行latex得到的)看看你引用了什么参考文献条目，
-然后到.bib中找相关条目的信息，
-最后根据.bst的格式要求将参考文献条目格式化输出，写到.bbl文件中。
-在运行latex将.bbl插入文档之前，你可以用文本编辑器打开它，做一些小的修改。
-你会发现，.bbl的格式和你自己手动写item很相似，它已经被赋予了一定的``表现形式''。
-
-.bib数据库中的参考文献条目可以手动编写，也可以在google的学术搜索中找到。
-各大数据库\footnote{应该说是国际知名数据库，譬如SCOPUS, IEEE, OSA等，国内数据库在搜索、导出方面一直是差得一塌糊涂。}也支持将参考文献信息导出为.bib，
-省时省力。
-以Google学术搜索为例：进入\url{http://scholar.google.com}，在``学术搜索设置''中，将``文献管理软件''设为``显示导入BibTeX''的连接，保存退出。
-然后学术搜索找到文献下会有``导出到BibTeX''连接，点击后Firefox会打开新的标签页，出现类似代码\ref{googlescholar}所示的内容
-\footnote{展示这些.bib条目使用了listings宏包，因为listings宏包协调中文的能力很糟糕，所以读者在查看模板的这部分源代码时会看到一些非常麻烦的东西。并且，直接将源代码的这部分内容复制到.bib中可能还会出错。我的建议是：这部分内容留意PDF就足够了。}。
-请注意，这个条目离``规范''还有一些距离。
-
-  \begin{lstlisting}[caption={从Google Scholar找到的，但并不规范的.bib条目}, label=googlescholar, float, escapeinside="", numbers=none]
-    @phdthesis{"白2008信用风险传染模型和信用衍生品的定价",
-      title={{"信用风险传染模型和信用衍生品的定价"}},
-      author={"白云芬"},
-      year={2008},
-      school={"上海交通大学"}
-    } 
-  \end{lstlisting}
-
-  上面的.bib条目的``名字''\cndash{}``白2008信用风险传染模型和信用衍生品的定价''，包含ASCII以外的字符，BibTeX无法处理；
-  条目还缺少了address域，这样编译出来的结果会出现``地址不详''；
-  并且，条目还缺少language域，BibTeX需要language域来判断是否是中文参考文献。
-  将上面的条目修正(改英文名、增加address和language域)，复制到本地的.bib文件中就可以了。
-  显然，这里描述的是参考文献的内容，而不是表现形式。
-
-  \begin{lstlisting}[caption={一个符合规范的.bib条目}, label=itemok, float, escapeinside="", numbers=none]
-    @phdthesis{bai2008,
-      title={{"信用风险传染模型和信用衍生品的定价"}},
-      author={"白云芬"},
-      year={2008},
-      language={zh},
-      address={"上海"},
-      school={"上海交通大学"}
-    } 
-  \end{lstlisting}
-
-由于中英文参考文献处理起来有差异，所以需要在参考文献中标注是否是中文文献。
-确切地说，BibTeX并不具有区分中英文参考文献的``智能''，这种智慧的来源是.bst文——它定义了处理参考文献的规则。
-GBT7714-2005NLang.bst中规定：.bib中的条目，如果条目的``language''域非空，就被认为是中文文献，否则被认为是英文文献。
-例如，刚才的文献，就会被认为是中文参考文献，采取一些针对中文的处理方式。
-
-最后，这个条目被bibtex处理后，赋予了一定的``表现形式''，在.bbl文件中以下面的样子出现。
-你还可以对它进行小的修改，这是一种很折磨人的终极修改方法。
-再次运行latex之后，它将被插入到文档中。
-
-\begin{lstlisting}[caption={.bbl中被格式化之后的条目}, escapeinside="", numbers=none]
-\bibitem["白云芬(2008)"]{bai2008}
-  \textsc{"白云芬"}.
-  \newblock {"信用风险传染模型和信用衍生品的定价"}[D].
-  \newblock "上海: 上海交通大学, 2008."
-\end{lstlisting}
-
-再罗嗦两句，
-.bst文件书写起来非常繁杂\footnote{可以参考\href{http://ftp.ctex.org/mirrors/CTAN/info/bibtex/tamethebeast/ttb_en.pdf}{《Tame The BeaST》}。}，书写符合GBT7714标准的.bst文件更是一项浩大的工程。
-因此，当大家为漂亮、标准的参考文献列表感到满意时，应该对GBT7714-2005NLang.bst的作者充满谢意。
-作者在CTeX BBS发的帖子，请看
-\href{http://bbs.ctex.org/viewthread.php?tid=33571&highlight=\%B2\%CE\%BF\%BC\%CE\%C4\%CF\%D7\%2BGB}{文后参考文献著录规则 GB/T 7714-2005}。
-关于GB/T 7714-2005标准本身，请看\href{http://bbs.ctex.org/viewthread.php?tid=33571&highlight=GB\%2B\%B2\%CE\%BF\%BC\%CE\%C4\%CF\%D7}{这里}。
-
-再多说两句，.bib是“参考文献的内容”，而控制参考文献表现(格式)的是.bst文件，本模板附带的是GBT7714-2005NLang.bst。
-
-\subsection{在正文中引用参考文献}
-
-参考文献可以分章节管理，只需要在主文件中的参考文献中都包含进去就可以，如\verb+\bibliography{chap1,chap2,...}+。
-
-正文中引用参考文献时，用\verb+\upcite{key1,key2,key3...}+可以产生“上标引用的参考文献”，
-如\upcite{Meta_CN,chen2007act,DPMG}。
-使用\verb+\cite{key1,key2,key3...}+则可以产生水平引用的参考文献，例如\cite{JohnD,zhubajie,IEEE-1363}。
-请看下面的例子，将会穿插使用水平的和上标的参考文献：关于书的\cite{Meta_CN,JohnD,IEEE-1363}，关于期刊的\upcite{chen2007act,chen2007ewi}，
-会议论文\cite{DPMG,kocher99,cnproceed}，
-硕士学位论文\cite{zhubajie,metamori2004}，博士学位论文\upcite{shaheshang,FistSystem01,bai2008}，标准文件\cite{IEEE-1363}，技术报告\upcite{NPB2}，电子文献\cite{xiaoyu2001, CHRISTINE1998}，用户手册\cite{RManual}。
-
-最后总结一些注意事项：
-\begin{itemize}
-\item 参考文献只有在正文中被引用了，才会在最后的参考文献列表中出现；
-\item 参考文献``数据库文件''.bib是纯文本文件，请使用UTF-8编码，不要使用GBK编码；
-\item 参考文献条目中通过language域是否为空判断是否是中文文献；
-\item 参考文献条目同样有“内容”和“表现形式”之分，这种可控性是BibTeX带来的。
-\end{itemize}
+      \includegraphics[width=0.4\textwidth]{chap2/ellipse}
+      \caption{第二矩量矩阵的椭圆表示}
+    \end{wrapfigure}
+    所以将特征向量$\lambda_1$与$\lambda_2$看作是椭圆的长轴与短轴，矩阵$R$决定了椭圆的方向。算法首先将矩阵$R$设置为单位阵，$\lambda_1$与$\lambda_2$设置为1，这假定图形的响应是一个单位圆。随后通过插值将仿射图形映射到图片当中，生成一个19*19的计算窗口，然后计算这个窗口的第二矩量矩阵，并计算这个矩阵的平方根与特征值。通过特征值我们可以知道这个图形的相应距离单位圆还差多少。通过最多16次迭代，算法可以得到一个接近于单位圆的响应。
+    \par
+    在此之后，算法将均一化这个图形，对正主方向，并将其输出到19*19的块中，计算这个图形的SIFT描述符。到这里，整个算法就完成了，这个算法读取一张图片，计算Hessian响应，在有高相应的地方，寻找仿射形状并计算它们的SIFT描述符。
 
 
-\subsection{参考文献管理器}
-
-参考文献数据库.bib虽然是纯文本的，可以用任意的文本编辑器查看，但总有人喜欢一个找一个``可视化''地查看每一条参考文献。
-我想\href{http://jabref.sourceforge.net/}{JabRef}应该是个很不错的选择。
-这是一个Java写的程序，需要JRE才能运行。
-就我测试的情况上看，很幸运，JabRef可以顺利打开GBK编码的.bib文件。
-但是，打开UTF--8编码的.bib源文件过程中总会崩溃，原因不得而知。
-由于我们的.bib文件使用的是UTF-8编码，所以JabRef暂时不可用。
-
-提到参考文献管理器，不得不提到另一个广被使用的软件——\href{http://www.endnote.com/}{EndNote}。
-在图书馆的宣讲会上，EndNote被吹得神乎其神，但我发现他对.bib的管理很不友好。
-EndNote可以导入.bib文件，却不能导出.bib，只能导出.bbl——被格式化的.bib。
-原来，JabRef比较``单纯''，不具备格式化参考文献的能力；
-而EndNote有那么一点设置参考文献输出格式的能力，然后就把这种能力滥用，这点搞得我很不爽。
-看来，EndNote和Word配合得更好一些。
-
-
-\section{用listings插入源代码}
-
-原先ctexbook文档类和listings宏包配合使用时，代码在换页时会出现莫名其妙的错误，后来经高人指点，顺利解决了。
-感兴趣的话，可以看看\href{http://bbs.ctex.org/viewthread.php?tid=53451}{这里}。
-这里给使用listings宏包插入源代码的例子，这里是一段C代码。
-另外，listings宏包真可谓博大精深，可以实现各种复杂、漂亮的效果，想要进一步学习的同学，可以参考
-\href{http://mirror.ctan.org/macros/latex/contrib/listings/listings.pdf}{listings宏包手册}。
-
-\begin{lstlisting}[language={C}, caption={一段C源代码}]
-#include <stdio.h>
-#include <unistd.h>
-#include <sys/types.h>
-#include <sys/wait.h>
-
-int main() {
-  pid_t pid;
-
-  switch ((pid = fork())) {
-  case -1:
-    printf("fork failed\n");
-    break;
-  case 0:
-    /* child calls exec */
-    execl("/bin/ls", "ls", "-l", (char*)0);
-    printf("execl failed\n");
-    break;
-  default:
-    /* parent uses wait to suspend execution until child finishes */
-    wait((int*)0);
-    printf("is completed\n");
-    break;
-  }
-
-  return 0;
-}
-\end{lstlisting}
-
+% https://hal.inria.fr/inria-00548252/document
+% http://lis.csail.mit.edu/pubs/tlp/Matching-ICPR06.pdf
+% http://www.robots.ox.ac.uk/~vgg/research/affine/det_eval_files/mikolajczyk_ijcv2004.pdf
+% cpvr09b
+% http://lear.inrialpes.fr/people/triggs/events/iccv03/cdrom/iccv03/1142_ericsson.pdf
