--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -3,7 +3,7 @@
 %%==================================================
 
 % 双面打印
-\documentclass[doctor, adobefonts, openright, cs4size]{sjtuthesis} 
+\documentclass[bachelor, adobefonts, openany, cs4size]{sjtuthesis} 
 % \documentclass[bachelor, adobefonts, openright, cs4size]{sjtuthesis} 
 % \documentclass[master]{sjtuthesis} 
 % \documentclass[%
@@ -12,30 +12,59 @@
 %   openany|openright 		% 单面打印，双面打印(默认)
 %   cs4size|c5size 		% 正文字号：小四、五号(默认)
 % ]
+\usepackage{fancybox}
+\fancyput(-1cm,-12.5cm){\rotatebox[origin=cc]{90}{\centerline{------------------------------------------装--------------------订--------------------线------------------------------------------}}}
+\usepackage{fancyhdr}
+\makeatletter
+\def\headrule{{\if@fancyplain\let\headrulewidth\plainheadrulewidth\fi%
+\hrule\@height 1.0pt \@width\headwidth\vskip1pt%
+\hrule\@height 0.5pt \@width\headwidth%
+\vskip-2\headrulewidth\vskip-1pt}}
+\makeatother
+\renewcommand{\footrulewidth}{0.7pt}
+
+\usepackage{wrapfig}
+
 
 \begin{document}
 
 %% 无编号内容：中英文论文封面、授权页
-\include{tex/id}
-\maketitle
-\makeenglishtitle
-\makeDeclareOriginal
-\makeDeclareAuthorization
+% \clearpage\pagestyle{empty}
+% \include{tex/id}
+% \maketitle
+% \makeenglishtitle
+% \makeDeclareOriginal
+% \makeDeclareAuthorization
 
-\frontmatter 	% 使用罗马数字对前言编号
+% \frontmatter 	% 使用罗马数字对前言编号
 
 %% 摘要
-\include{tex/abstract}
+% \include{tex/abstract}
 
 %% 目录、插图目录、表格目录
-\tableofcontents
-\listoffigures
-\addcontentsline{toc}{chapter}{\listfigurename} %将插图目录加入全文目录
-\listoftables
-\addcontentsline{toc}{chapter}{\listtablename}  %将表格目录加入全文目录
+\clearpage                       % Otherwise \pagestyle affects the previous page.
+{                                % Enclosed in braces so that re-definition is temporary.
+  \pagestyle{empty}              % Removes numbers from middle pages.
+  \fancypagestyle{plain}         % Re-definition removes numbers from first page.
+  {
+  	\fancyfoot{}
+  }
+  \include{tex/id}
+  \maketitle
+  % \makeenglishtitle
+  
+  \include{tex/abstract}
+  \tableofcontents
+  \thispagestyle{empty}          % Removes numbers from last page.
+}
 
-\include{tex/symbol} % 主要符号、缩略词对照表
+% \listoffigures
+% \addcontentsline{toc}{chapter}{\listfigurename} %将插图目录加入全文目录
+% \listoftables
+% \addcontentsline{toc}{chapter}{\listtablename}  %将表格目录加入全文目录
 
+% \include{tex/symbol} % 主要符号、缩略词对照表
+% \clearpage\pagestyle{fancy}
 \mainmatter	% 使用阿拉伯数字对正文编号
 
 %% 正文内容
@@ -56,7 +85,7 @@
 
 \backmatter	% 文后无编号部分 
 
-%% 参考资料
+%% 参考资料b
 \bibliography{bib/chap1,bib/chap2}
 
 %% 致谢、发表论文、参与项目、简历
