--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -71,7 +71,7 @@
 \include{tex/chapter01}
 \include{tex/chapter02}
 \include{tex/chapter03}
-\include{tex/conclusion}
+\include{tex/chapter04}
 
 \appendix	% 使用英文字母对附录编号，重新定义附录中的公式、图图表编号样式
 \renewcommand\theequation{\Alph{chapter}--\arabic{equation}}	
@@ -79,9 +79,9 @@
 \renewcommand\thetable{\Alph{chapter}--\arabic{table}}
 
 %% 附录内容，本科学位论文可以用翻译的文献替代。
-\include{tex/app_log}
-\include{tex/app_eq}
-\include{tex/app_cjk}
+% \include{tex/app_log}
+% \include{tex/app_eq}
+% \include{tex/app_cjk}
 
 \backmatter	% 文后无编号部分 
 
@@ -89,9 +89,9 @@
 \bibliography{bib/chap1,bib/chap2}
 
 %% 致谢、发表论文、参与项目、简历
-\include{tex/ack} 	%% 致谢
-\include{tex/pub}	%% 发表论文
-\include{tex/projects}  %% 参与的项目
+% \include{tex/ack} 	%% 致谢
+% \include{tex/pub}	%% 发表论文
+% \include{tex/projects}  %% 参与的项目
 % \include{tex/resume}
 
 \end{document}
