--- a/doc/bib/chap2.bib
+++ b/doc/bib/chap2.bib
@@ -1,289 +1,141 @@
 % Encoding: UTF-8
 
-@BOOK{Meta_CN,
-  title = {{电磁超介质及其应用}},
-  address = {北京},
-  publisher = {国防工业出版社},
-  year = {2008},
-  author = {崔万照 and 马伟 and 邱乐徳 and 张洪太},
-  language = {zh}
+@article{mikolajczyk2004scale,
+  title={Scale \& affine invariant interest point detectors},
+  author={Mikolajczyk, Krystian and Schmid, Cordelia},
+  journal={International journal of computer vision},
+  volume={60},
+  number={1},
+  pages={63--86},
+  year={2004},
+  publisher={Springer}
 }
 
-@BOOK{JohnD,
-  title = {{Photonic Crystals: Molding the Flow of Light}},
-  publisher = {Princeton University Press},
-  year = {2008},
-  author = {Joannopoulos, J. D. and Johnson, S. G. and Winn, J. N.}
+@misc{gonzales2002digital,
+  title={Digital Image Processing, 2-nd Edition},
+  author={Gonzales, Rafael C and Woods, Richard E},
+  year={2002},
+  publisher={Prentice Hall}
 }
 
-@book{IEEE-1363,
-  author={{IEEE Std 1363-2000}},
-  title={{IEEE} Standard Specifications for Public-Key Cryptography},
-  address={New York},
-  publisher={IEEE},
-  year={2000}
+@InProceedings{Perdoch-CVPR-2009,
+   author = {Michal Per{\v d}och, Ond{\v r}ej Chum, Ji{\v r}{\' i} Matas},
+   title = {Efficient Representation of Local Geometry for Large Scale Object Retrieval},
+   booktitle = {IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+   year = {2009},
+   month = {June},
+   day = {20--25},
+   venue = {Miami, Florida, USA},
+   pages = {9--16},
+   annote = {State of the art methods for image and object retrieval
+                  exploit both appearance (via visual words) and local
+                  geometry (spatial extent, relative pose). In large scale
+                  problems, memory becomes a limiting factor - local
+                  geometry is stored for each feature detected in each
+                  image and requires storage larger than the inverted file
+                  and term frequency and inverted document frequency
+                  weights together. We propose a novel method for learning
+                  discretized local geometry representation based on
+                  minimization of average reprojection error in the space
+                  of ellipses. The representation requires only 24 bits per
+                  feature without drop in performance. Additionally, we
+                  show that if the gravity vector assumption is used
+                  consistently from the feature description to spatial
+                  verification, it improves retrieval performance and
+                  decreases the memory footprint. The proposed method
+                  outperforms state of the art retrieval algorithms in a
+                  standard image retrieval benchmark.},
+    ISBN = {978-1-4244-3994-2},
+}
+@book{cook2013cuda,
+  title={CUDA programming: a developer's guide to parallel computing with GPUs},
+  author={Cook, Shane},
+  year={2013},
+  publisher={Newnes}
 }
 
-@ARTICLE{chen2007act,
-  author = {Chen, H. and Chan, C. T.},
-  title = {{Acoustic cloaking in three dimensions using acoustic metamaterials}},
-  journal = {Applied Physics Letters},
-  year = {2007},
-  volume = {91},
-  pages = {183518},
-  publisher = {AIP}
+@article{nvidia2011nvidia,
+  title={Nvidia cuda c programming guide},
+  author={Nvidia, CUDA},
+  journal={NVIDIA Corporation},
+  volume={120},
+  year={2011}
 }
 
-@ARTICLE{chen2007ewi,
-  author = {Chen, H. and Wu, B. I. and Zhang, B. and Kong, J. A.},
-  title = {{Electromagnetic Wave Interactions with a Metamaterial Cloak}},
-  journal = {Physical Review Letters},
-  year = {2007},
-  volume = {99},
-  pages = {63903},
-  number = {6},
-  publisher = {APS}
+@inproceedings{kirk2007nvidia,
+  title={NVIDIA CUDA software and GPU parallel computing architecture},
+  author={Kirk, David},
+  booktitle={ISMM},
+  volume={7},
+  pages={103--104},
+  year={2007}
 }
 
-
-@inproceedings{kocher99,
-  author={C. Kocher and J. Jaffe and B. Jun},
-  title={Differential Power Analysis},
-  editor={M. Wiener},
-  booktitle={Advances in Cryptology ({CRYPTO}~'99)},
-  series={Lecture Notes in Computer Science},
-  volume={1666},
-  pages={388-397},
-  publisher={Springer-Verlag},
-  month={August},
-  year={1999}
-}
-
-
-@INCOLLECTION{Krasnogor2004e,
-  AUTHOR = {N. Krasnogor},
-  TITLE = {Towards robust memetic algorithms},
-  BOOKTITLE = {Recent Advances in Memetic Algorithms},
-  PUBLISHER = {Springer Berlin Heidelberg},
-  YEAR = {2004},
-  PAGES = {185-207},
-  EDITOR = {W.E. Hart and N. Krasnogor and J.E. Smith},
-  VOLUME = {166},
-  SERIES = {Studies in Fuzziness and Soft Computing},  
-  ADDRESS = {New York},  
-}
-
-@INCOLLECTION{zjsw,
-  AUTHOR = {班固},
-  TITLE = {苏武传},
-  BOOKTITLE = {传记散文英华},
-  PUBLISHER = {湖北人民出版社},
-  YEAR = {1998},  
-  PAGES = {65-69},
-  EDITOR = {郑在瀛 and 汪超宏 and 周文复},
-  VOLUME = {2},
-  SERIES = {新古文观止丛书},  
-  ADDRESS = {武汉},
-  language = {zh},
-}
-
-
-@INBOOK{clzs,
-  AUTHOR = {阎真},
-  TITLE = {沧浪之水},
-  CHAPTER = {大人物还是讲人情的},
-  PAGES = {185-207},
-  PUBLISHER = {人民文学出版社},
-  YEAR = {2001},  
-  language = {zh},
-}
-
-@Book{tex,
- author    = {Donald E. Knuth},
- title     = {The {\TeX} Book},
- publisher = {Addison-Wesley Publishing Company},
- address   = {Reading, MA},
- year      = 1989,
- edition   = {15th},
-}
-
-@Book{companion,
- author    = {Michel Goosens and Frank Mittelbach and Alexander Samarin},
- title     = {The {\LaTeX} Companion},
- publisher = {Addison-Wesley Publishing Company},
- address   = {Reading, MA},
- PAGES = {112--125},
- year      = 1994,
-}
-
-@ARTICLE{ELIDRISSI94,
-  AUTHOR =       {{Chafik El Idrissi}, M. and {Roney}, A. and {Frigon}, C. and
-                  {Larzilli{\`e}re}, M.},
-  TITLE =        {Measurements of total kinetic-energy released to the {$N=2$}
-                  dissociation limit of {H}$_2$ --- evidence of the dissociation
-                  of very high vibrational {R}ydberg states of {H}$_2$ by
-                  doubly-excited states},
-  JOURNAL =      {Chemical Physics Letters},
-  PAGES =        {260-266},
-  VOLUME =       224,
-  NUMBER =       10,
-  YEAR =         1994,
-}
-
-@ARTICLE{MELLINGER96,
-  AUTHOR =       {Mellinger, A. and Vidal, C. R. and Jungen, Ch.},
-  TITLE =        {Laser reduced fluorescence study of the carbon-monoxide nd
-                  triplet {R}ydberg series-experimental results and multichannel
-                  quantum-defect analysis},
-  JOURNAL =      {J. Chem. Phys.},
-  PAGES =        {8913-8921},
-  VOLUME =       104,
-  NUMBER =       5,
-  YEAR =         1996,
-}
-
-@ARTICLE{SHELL02,
-  AUTHOR =       {Michael Shell},
-  TITLE =        {How to Use the {IEEEtran \LaTeX} Class},
-  JOURNAL =      {Journal of {\LaTeX} Class Files},
-  YEAR =         2002,
-  VOLUME =       12,
-  NUMBER =       4,
-  PAGES =        {100--120}
-}
-
-@TechReport{NPB2,
-  title =        {The {NAS} Parallel Benchmarks 2.0},
-  author =       {Alex Woo and David Bailey and Maurice Yarrow and Wijngaart
-                  Wijngaart and Tim Harris and William Saphir},
-  year =         1995,
-  month =        dec # {~05},
-  institution =  {The Pennsylvania State University CiteSeer Archives},
-  url =          {http://www.nasa.org/}
-}
-
-@INPROCEEDINGS{DPMG,
-  author =       {Kim, Sangbum and Woo, Namyoon and Yeom, Heon Y. and Park,
-                  Taesoon and Park, Hyoungwoo},
-  title =        {Design and {I}mplementation of {D}ynamic {P}rocess
-                  {M}anagement for {G}rid-enabled {MPICH}},
-  booktitle =    {the 10th European PVM/MPI Users' Group Conference},
-  year =         2003,
-  address =      {Venice, Italy},
-  month =        sep,
-}
-
-@INPROCEEDINGS{cnproceed,
-  author =       {王重阳 and 黄药师 and 欧阳峰 and 洪七公 and 段皇帝},
-  title =        {武林高手从入门到精通},
-  booktitle =    {第~$N$~次华山论剑},
-  year =         2006,
-  address =      {西安, 中国},
-  publisher = {中国古籍出版社},
-  month =        sep,
-  language =     {zh},
-}
-
-@ARTICLE{cnarticle,
-  AUTHOR =       {贾宝玉 and 林黛玉 and 薛宝钗 and 贾探春},
-  TITLE =        {论刘姥姥食量大如牛之现实意义},
-  JOURNAL =      {红楼梦杂谈},
-  PAGES =        {260--266},
-  VOLUME =       224,
-  YEAR =         1800,
-  LANGUAGE =         {zh},
-}
-
-@MastersThesis{zhubajie,
-  author =       {猪八戒},
-  title =        {论流体食物的持久保存},
-  school =       {广寒宫大学},
-  year =         2005,
-  address =      {北京},
-  language =         {zh},
-}
-
-@PhdThesis{shaheshang,
-  author =       {沙和尚},
-  title =        {论流沙河的综合治理},
-  school =       {清华大学},
-  year =         2005,
-  address =      {北京},
-  language =     {zh},
-}
-
-@MastersThesis{metamori2004,
-  author =       {Ashwin Raju Jeyakumar},
-  title =        {Metamori: A library for Incremental File Checkpointing},
-  school =       {Virgina Tech},
-  year =         2004,
-  month =        jun # {~21},
-  address =      {Blacksburg},
-}
-
-@PHDTHESIS{FistSystem01,
-  AUTHOR =       {Erez Zadok},
-  TITLE =        {{FiST: A System for Stackable File System Code Generation}},
-  YEAR =         2001,
-  MONTH =        {May},
-  SCHOOL =       {Computer Science Department, Columbia University},
-  ADDRESS =      {USA}
-}
-
-@INBOOK{ColdSources,
-  AUTHOR =       {P. Gr{\"o}ning and L. Nilsson and P. Ruffieux and R.
-                  Clergereaux and O. Gr{\"o}ning},
-  TITLE =        {Encyclopedia of Nanoscience and Nanotechnology},
-  pages =        {547--579},
-  PUBLISHER =    {American Scientific Publishers},
-  YEAR =         2004,
-  volume =       1,
-}
-
-  @phdthesis{bai2008,
-  title={{信用风险传染模型和信用衍生品的定价}},
-  author={白云芬},
+@inproceedings{ryoo2008optimization,
+  title={Optimization principles and application performance evaluation of a multithreaded GPU using CUDA},
+  author={Ryoo, Shane and Rodrigues, Christopher I and Baghsorkhi, Sara S and Stone, Sam S and Kirk, David B and Hwu, Wen-mei W},
+  booktitle={Proceedings of the 13th ACM SIGPLAN Symposium on Principles and practice of parallel programming},
+  pages={73--82},
   year={2008},
-  language={zh},
-  school={上海交通大学},
-address={上海},
-  }
-
-
-%萧钰.出版业信息化迈人快车道[EB/OL]. (2001-12-19)[2002-04-15]. http://www.creader.com/news/20011219/200112190019. html.
-@MISC{xiaoyu2001,
-  author =       {萧钰},
-  title =        {出版业信息化迈人快车道},
-  year =         {2001},
-  TypeofLit =    {EB/OL},
-  modifydate =   {2001-12-19},
-  citedate =     {2002-04-15},
-  url =          {http://www.creader.com/news/20011219/200112190019.html},
-  language =     {Chinese},
+  organization={ACM}
 }
 
-% CHRISTINE M. Plant physiology: plant biology in the Genome Era[J/OL]. Science, 1998, 281:331-332[1998-09-23]. http://www.sciencemag.org/cgi/collection/anatmorp.
-% 在线析出文献
-@article{CHRISTINE1998,
-  author =       {Christine, Mlot},
-  title =        {Plant physiology: plant biology in the Genome Era},
-  journal =      {Science},
-  volume =       {281},
-  pages =        {331-332},
-  year =         {1998},
-  TypeofLit =    {J/OL},
-  citedate =     {1998-09-23},
-  url =           {http://www.sciencemag.org/cgi/collection/anatmorp},
+@inproceedings{sivic2005discovering,
+  title={Discovering objects and their location in images},
+  author={Sivic, Josef and Russell, Bryan C and Efros, Alexei A and Zisserman, Andrew and Freeman, William T},
+  booktitle={Computer Vision, 2005. ICCV 2005. Tenth IEEE International Conference on},
+  volume={1},
+  pages={370--377},
+  year={2005},
+  organization={IEEE}
 }
 
-@book{RManual,
-        Address = {Vienna, Austria},
-        Author = {{R Core Team}},
-        Note = {{ISBN} 3-900051-07-0},
-        Organization = {{R Foundation for Statistical Computing}},
-        title = {R: A Language and Environment for Statistical Computing},
-        url = {http://www.R-project.org/},
-        Year = {2012},
+@incollection{mikolajczyk2002affine,
+  title={An affine invariant interest point detector},
+  author={Mikolajczyk, Krystian and Schmid, Cordelia},
+  booktitle={Computer Vision—ECCV 2002},
+  pages={128--142},
+  year={2002},
+  publisher={Springer}
+}
+
+@inproceedings{chiu2006matching,
+  title={Matching interest points using affine invariant concentric circles},
+  author={Chiu, Han-Pang and Lozano-Perez, Tomas},
+  booktitle={Pattern Recognition, 2006. ICPR 2006. 18th International Conference on},
+  volume={2},
+  pages={167--170},
+  year={2006},
+  organization={IEEE}
+}
+
+@inproceedings{ericsson2003affine,
+  title={An affine invariant deformable shape representation for general curves},
+  author={Ericsson, Anders and Astrom, K},
+  booktitle={Computer Vision, 2003. Proceedings. Ninth IEEE International Conference on},
+  pages={1142--1149},
+  year={2003},
+  organization={IEEE}
+}
+
+@article{whitehead2011precision,
+  title={Precision \& performance: Floating point and IEEE 754 compliance for NVIDIA GPUs},
+  author={Whitehead, Nathan and Fit-Florea, Alex},
+  journal={rn (A+ B)},
+  volume={21},
+  pages={1--1874919424},
+  year={2011}
+}
+
+@article{burt1983laplacian,
+  title={The Laplacian pyramid as a compact image code},
+  author={Burt, Peter J and Adelson, Edward H},
+  journal={Communications, IEEE Transactions on},
+  volume={31},
+  number={4},
+  pages={532--540},
+  year={1983},
+  publisher={IEEE}
 }
 
 @comment{jabref-meta: selector_publisher:}
