--- a/doc/tex/chapter02.tex
+++ b/doc/tex/chapter02.tex
@@ -4,27 +4,26 @@
 %% modified by wei.jianwen@gmail.com
 %% Encoding: UTF-8
 %%==================================================
-
+% \bibliography{../bib/chap1,../bib/chap2}
 \chapter{Hessian-Affine兴趣点检测算法}
 \label{chap:algorithm}
-  本算法可以在图像经过仿射变换或者尺度变换后寻找到相应的兴趣点，为了完成这样的目标，本算法基于如下理论：
+  本算法可以在图像经过仿射变换或者尺度变换后寻找到相应的兴趣点，为了完成这样的目标，本算法基于如下理论\cite{mikolajczyk2004scale}：
   \begin{itemize}
     \item 通过Hessian矩阵检测出的兴趣点可以抵抗仿射变换的干扰，对相同的几何图案产生类似的响应；
     \item 尺度空间理论；
     \item 通过二阶矩量矩阵估测一个像素和哪些临近像素可以构成一个仿射形状。
   \end{itemize}
-  本算法的主体流程如下：
+  本算法的主体流程如下\cite{Perdoch-CVPR-2009}：
   \begin{enumerate}
     \item 通过尺度空间理论构建不同的尺度空间；
     \item 在不同的尺度空间中，对每个3*3的像素块计算Hessian矩阵的响应，并找出在相邻尺度空间中响应最大的点；
     \item 计算这些点的仿射形状，如果存在仿射形状，将其均一化后计算SIFT描述符。
   \end{enumerate}
   通过这三步，可以排除尺度与镜头角度的影响，将图像中的关键点找出来。
-
   \section{尺度空间理论}
     由于计算机无法确定一个图像中物体的尺度，也就是说无从知道物体的大小，一个100像素的块可能是一片树叶也可能是一颗树；对于机器视觉系统，需要生成多个尺度空间，来抵抗尺度的干扰。尺度空间可以处理n维函数（计算机视觉中为2维），将其嵌入到一族单参数函数族中。这个单参数函数族就叫做尺度空间。为了生成多个尺度，通过多次降采样与高斯模糊来模拟人眼的特性。
     \subsection{高斯模糊}
-      模糊算法可以认为是每个像素取周边像素的平均值，但是模糊算法需要一个核函数来决定怎样进行模糊运算。常用的模糊算法有均值模糊、高斯模糊、镜头模糊等，对应不同的和函数。
+      模糊算法可以认为是每个像素取周边像素的平均值，但是模糊算法需要一个核函数来决定怎样进行模糊运算。常用的模糊算法有均值模糊、高斯模糊、镜头模糊等，对应不同的核函数。
       \begin{figure}[!htp]
         \centering
         \subfigure[原图]{\includegraphics[width=0.2\textwidth]{chap2/lena}}
@@ -34,7 +33,7 @@
         \subfigure[均值模糊]{\includegraphics[width=0.2\textwidth]{chap2/lenaAvgBlur}}
         \caption{模糊算法示例}
       \end{figure}
-      在本算法中，由于高斯函数满足如下尺度空间公理：
+      在本算法中，由于高斯函数满足如下尺度空间公理\cite{burt1983laplacian}：
       \begin{itemize}
         \item 线性
         \item 平移不变性
@@ -61,8 +60,7 @@
         \caption{高斯模糊中，不同$\sigma$下的一张图片}
       \end{figure}
     \subsection{高斯金字塔}
-
-      为了构建高斯金字塔，一般需要如下几个步骤：首先，图像经过一个低通滤波器进行平滑（本算法使用高斯模糊），然后，对这个平滑后的图像进行抽样（一般抽样比例在水平和竖直方向上都为1/2），从而得到一系列的缩小的图像。对于高斯金字塔，很容易直观地理解为对同一尺寸的图像，然后进行不同程度的高斯平滑，这些图像构成高斯金字塔，这种是不对的，这描述的图像集合叫做一个八度。金字塔总要有个变“尖”的过程，真正的高斯金字塔要有个平滑以及下采样的过程，因此整个图像平滑以及下采样再平滑，构成的所有图像集合才构成了图像的高斯金字塔。
+      为了构建高斯金字塔，一般需要如下几个步骤\cite{sivic2005discovering}：首先，图像经过一个低通滤波器进行平滑（本算法使用高斯模糊），然后，对这个平滑后的图像进行抽样（一般抽样比例在水平和竖直方向上都为1/2），从而得到一系列的缩小的图像。对于高斯金字塔，很容易直观地理解为对同一尺寸的图像，然后进行不同程度的高斯平滑，这些图像构成高斯金字塔，这种是不对的，这描述的图像集合叫做一个八度。金字塔总要有个变“尖”的过程，真正的高斯金字塔要有个平滑以及下采样的过程，因此整个图像平滑以及下采样再平滑，构成的所有图像集合才构成了图像的高斯金字塔。
       \begin{figure}[htp]
         \centering
         \includegraphics[width=0.7\textwidth]{chap2/multiOctave}
@@ -145,7 +143,7 @@
       \end{equation}
       如果得出其中一个向量的偏移大于0.6，则移动到相邻点上。通过最多5次的迭代，可以得到一个最终候选点的精确位置与尺度$\hat{x}$。
     \subsection{去除边缘点}
-      由于Hessian矩阵对边缘点敏感，但边缘点对一些噪声不稳定，因此需要去除这些边缘点。Hessian矩阵的特征值$\alpha$与$\beta$有如下公式：
+      由于Hessian矩阵对边缘点敏感，但边缘点对一些噪声不稳定\cite{ericsson2003affine}，因此需要去除这些边缘点。Hessian矩阵的特征值$\alpha$与$\beta$有如下公式：
       \begin{equation}
         Tr(H)=D_{xx}+D_{yy}=\alpha+\beta
       \end{equation}
@@ -159,7 +157,7 @@
       \end{equation}
       由于\ref{equ:edgeEval}是关于$r$的增函数，所以可以通过这个公式判断$r$的大小，从而判断这个点是不是边缘点。
   \section{寻找标准仿射形状}
-    由于图像可能经过仿射变换，为了找到一个兴趣点附近图形的标准仿射形状，引入了第二矩量矩阵：
+    由于图像可能经过仿射变换，为了找到一个兴趣点附近图形的标准仿射形状，引入了第二矩量矩阵\cite{ericsson2003affine,Perdoch-CVPR-2009,mikolajczyk2004scale,mikolajczyk2002affine,chiu2006matching}：
     \begin{equation*}
       M=\sum_{x,y}w(x,y)\left[\begin{array}{cc}
       I_x^2 & I_xI_y \\
