--- a/doc/tex/chapter03.tex
+++ b/doc/tex/chapter03.tex
@@ -2,13 +2,14 @@
 %% chapter03.tex for SJTU Master Thesis
 %% Encoding: UTF-8
 %%==================================================
+% \bibliography{../bib/chap1,../bib/chap2}
 
 \chapter{CUDA计算框架}
-  CUDA是NVIDIA的GPGPU模型，它使用C语言为基础，可以直接以大多数人熟悉的C语言，写出在显示芯片上执行的程序，而不需要去学习特定的显示芯片的指令或是特殊的结构。
+  CUDA是NVIDIA的GPGPU模型，它使用C语言为基础，可以直接以大多数人熟悉的C语言，写出在显示芯片上执行的程序，而不需要去学习特定的显示芯片的指令或是特殊的结构\cite{nvidia2011nvidia}。
   \par
   在CUDA的架构下，一个程序分为两个部份：host端和device端。Host端是指在CPU上执行的部份，而device端则是在显示芯片上执行的部份。Device端的程序又称为kernel。通常host端程序会将数据准备好后，复制到显卡的内存中，再由显示芯片执行device端程序，完成后再由host端程序将结果从显卡的内存中取回。
   \section{GPU与CPU的对比}
-    CPU和GPU各有所长。一般而言，CPU擅长处理不规则数据结构和不可预测的存取模式，以及递归算法、分支密集型代码和单线程程序。这类程序任务拥有复杂的指令调度、循环、分支、逻辑判断以及执行等步骤。例如，操作系统、文字处理、交互性应用的除错、通用计算、系统控制和虚拟化技术等系统软件和通用应用程序等等。而GPU擅于处理规则数据结构和可预测存取模式。例如，光影处理、3D 坐标变换、油气勘探、金融分析、医疗成像、有限元、基因分析和地理信息系统以及科学计算等方面的应用。显示芯片通常具有更大的内存带宽。具有更大量的执行单元。和高阶 CPU 相比，显卡的价格较为低廉。
+    CPU和GPU各有所长,一般而言，CPU擅长处理不规则数据结构和不可预测的存取模式，以及递归算法、分支密集型代码和单线程程序。这类程序任务拥有复杂的指令调度、循环、分支、逻辑判断以及执行等步骤。例如，操作系统、文字处理、交互性应用的除错、通用计算、系统控制和虚拟化技术等系统软件和通用应用程序等等。而GPU擅于处理规则数据结构和可预测存取模式。例如，光影处理、3D 坐标变换、油气勘探、金融分析、医疗成像、有限元、基因分析和地理信息系统以及科学计算等方面的应用。显示芯片通常具有更大的内存带宽。具有更大量的执行单元。和高阶 CPU 相比，显卡的价格较为低廉。
     \begin{figure}[htp]
       \centering
       \includegraphics[width=0.7\textwidth]{chap3/application}
@@ -45,7 +46,7 @@
       \item 共享内存
       \item 同步的范围
     \end{enumerate}
-    被作为C语言的扩展暴露给开发者了。这三个功能提供细粒度的数据与线程并行，以及粗粒度的数据与任务并行。这指引开发者将问题分割成可以在块与线程中独立执行的子问题，并且子问题的解决方法是类似的。这种分割防止语言过多的处理底层信息，也无需考虑不同子问题在实际运行中是并行还是串行执行，使代码与底层相互独立，无需在编写时考虑实际运行时的核心数量。为了完成这项功能，CUDA运行时可以根据流处理器的数量自动控制运行参数。
+    被作为C语言的扩展暴露给开发者了。这三个功能提供细粒度的数据与线程并行\cite{cook2013cuda}，以及粗粒度的数据与任务并行。这指引开发者将问题分割成可以在块与线程中独立执行的子问题，并且子问题的解决方法是类似的。这种分割防止语言过多的处理底层信息，也无需考虑不同子问题在实际运行中是并行还是串行执行，使代码与底层相互独立，无需在编写时考虑实际运行时的核心数量。为了完成这项功能，CUDA运行时可以根据流处理器的数量自动控制运行参数。
     \par
     这个模型让CUDA代码可以在不同的GPU体系结构上运行，从高性能娱乐级的GeForce系列GPU到专业级Quadro系列GPU以及高性能计算领域的Tesla系列GPU。automatic-scalability
     \begin{figure}[htp]
@@ -89,7 +90,7 @@
       \par
       线程在访问常量内存时会把数据向周围的线程进广播，如果周围的进程也用到了相同的数据，则会大幅减少延迟。贴图内存适合访问在二维上规则的数据，但是在使用前需要先进行绑定。
       \par
-      除此之外，每个SM还拥有L1与L2缓存，共享内存与寄存器是L1缓存的一部分，线程访问全局内存时需要经过L1与L2缓存，访问贴图内存是只经过L2缓存。
+      除此之外，每个SM还拥有L1与L2缓存，共享内存与寄存器是L1缓存的一部分，线程访问全局内存时需要经过L1与L2缓存，访问贴图内存是只经过L2缓存\cite{kirk2007nvidia}。
     \subsection{异构计算编程}
       CUDA编程模型假定CUDA线程在分离的硬件设备上作为主机的协处理器来运行C程序，在这种情况下，核函数执行在GPU上，剩余部分由CPU来执行。
       \begin{figure}[htp]
@@ -110,4 +111,4 @@
     \par
     CPU方面，Intel E8200提供了SSE4.1指令集，有专门的硬件可以同时运算4个单精度浮点型。在测试中通过gcc的优化开关打开。
   \section{计算精度}
-    浮点运算的标准是IEEE 754-2008，在计算能力1.2之后的GPU都支持这一标准下的双精度运算，所有的NVIDIA GPU都支持这一标准下的单精度运算。但是GPU与CPU实现这一标准的方法不同，导致运算结果也会不同，例如，FMA(Fused Multiply-Add)指令可以通过一条指令运算$(X*Y+Z)$的结果，CUDA可以直接支持这条指令。对于x86 CPU来说，由于最初的x87 FPU在计算浮点运算时使用80bit的浮点运算单元，在单个运算上的精度不差于GPU，但是由于多次迭代的原因，在运算$(X*Y+Z)$时，可能会造成精度丢失。除此之外，x87 FPU由于多次进行精度转换，还能能产生不可预测的运算结果，为了让算法的结果具有对比性，编译时将强制CPU使用SSE指令进行浮点运算。
+    浮点运算的标准是IEEE 754-2008，在计算能力1.2之后的GPU都支持这一标准下的双精度运算\cite{whitehead2011precision}，所有的NVIDIA GPU都支持这一标准下的单精度运算。但是GPU与CPU实现这一标准的方法不同，导致运算结果也会不同，例如，FMA(Fused Multiply-Add)指令可以通过一条指令运算$(X*Y+Z)$的结果，CUDA可以直接支持这条指令。对于x86 CPU来说，由于最初的x87 FPU在计算浮点运算时使用80bit的浮点运算单元，在单个运算上的精度不差于GPU，但是由于多次迭代的原因，在运算$(X*Y+Z)$时，可能会造成精度丢失。除此之外，x87 FPU由于多次进行精度转换，还能能产生不可预测的运算结果，为了让算法的结果具有对比性，编译时将强制CPU使用SSE指令进行浮点运算。
