--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -76,7 +76,7 @@
   % \maketitle
   % \makeenglishtitle
   
-  \include{tex/abstract}
+  % \include{tex/abstract}
   \tableofcontents
   \thispagestyle{empty}          % Removes numbers from last page.
 }
